--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en"></html>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/admin/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panel de Administración - Employee Tracker</title>
+    <title>Admin Panel - Employee Tracker</title>
   </head>
   <body>
     <div id="app"></div>
